# ubuntu-mive

./: compose.yaml  mise.toml  readme.md
.github/workflows/: app.yaml  build.yaml  ci.yaml  mive.yaml
app-pkg/: .copier-answers-py.yaml  .pre-commit-config.yaml  hatch.toml  mise.toml  noxfile.py  pyproject.toml  readme.md  ruff.toml
app-pkg/.circleci/: config.yml
app-pkg/mise-tasks/: bootstrap
app-pkg/src/mivepy/: cli.py
app-pkg/src/mivepy_tests/: test_cli.py
base/: Dockerfile
mive/: Dockerfile  version-checks.sh
tasks/: build-all  version-checks
