[build-system]
requires = [
    'hatchling',
    'hatch-regex-commit',
]
build-backend = 'hatchling.build'


[project]
name = 'mivepy'
authors = [
    {name = 'Randy Syring', email = 'devteam@level12.io'},
]
requires-python = '>=3.13'
dynamic = ['version']
readme = 'readme.md'
dependencies = [
    "click>=8.1.8",
]

[project.scripts]
'mivepy' = 'mivepy.cli:main'


[dependency-groups]
# Note: keeping copier-py-package deps grouped separate from app deps should help avoid unnecessary
# conflicts when upgrading to copier-py-package latest.
dev = [
    # From copier-py-package:
    'click>=8.1.8',
    'hatch>=1.14.0',
    'pip-audit',
    'ruff>=0.9.6',

    # App specific:
    # TODO: fill in app deps here
]
tests = [
    # From copier-py-package:
    'nox>=2025.2.9',
    'pytest>=8.3.4',

    # App specific:
    # TODO: fill in app deps here
]

[tool.uv]
# These default dependency groups are installed (along w/ base dependencies) when using `uv sync`.
# They are split out like this so nox can install them independently.
default-groups = ['dev', 'tests']
